--- a/index.html
+++ b/index.html
@@ -1,63 +1,45 @@
 <!doctype html>
 <html>
-	<head>
-		<meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width" />
-		<title>Training App</title>
-		<link rel="stylesheet" href="assets/css/master.css" type="text/css" media="screen" />
-		
-		<script src="phonegap.js" type="text/javascript" charset="utf-8"></script>
-		
-		<script src="assets/js/xui.js" type="text/javascript" charset="utf-8"></script>
-		
-		<script src="assets/js/lawnchair/adaptors/LawnchairAdaptorHelpers.js" type="text/javascript" charset="utf-8"></script>
-		
-		<script src="assets/js/lawnchair/adaptors/DOMStorageAdaptor.js" type="text/javascript" charset="utf-8"></script>
-		
-		<script src="assets/js/lawnchair/adaptors/WebkitSQLiteAdaptor.js" type="text/javascript" charset="utf-8"></script>
-		
-		<script src="assets/js/lawnchair/Lawnchair.js" type="text/javascript" charset="utf-8"></script>
-		
-		<script src="assets/js/dsl.js" type="text/javascript" charset="utf-8"></script>
-		
-		<script src="assets/js/app.js" type="text/javascript" charset="utf-8"></script>
-		
-	</head>
-	<body>
- 		<div id="title_bar">Phone<strong>Gap</strong> Training App</div>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Kitchen Sink</title>
 
-		<div id="welcome" class="view">
-		  <div class="app_button" id="map_button">Show My Location</div>
-  	      <div class="app_button" id="settings_button">Settings</div>
-		</div>
+    <link rel="stylesheet" href="resources/css/sink.css" type="text/css">
+    <link rel="stylesheet" href="resources/css/codebox.css" type="text/css">
 
-		<div id="map" class="view">
-		  <div class="map_image">
-              <img id="static_map" src="assets/img/staticmap.png">
-		  </div>
-		  <p>This is where you are</p>
-		  <div class="app_button" id="welcome_button">Go Back</div>
-		</div>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+    <script type="text/javascript" src="autotheme.js"></script>
+    <script type="text/javascript" src="sencha-touch.js"></script>
+    <script type="text/javascript" src="src/CodeBox.js"></script>
+    <script type="text/javascript" src="src/index.js"></script>
 
-		<div id="settings" class="view">
-		  <form id="settings_form">
-		    <fieldset>
-		      <legend>Map Type</legend>
-			  <input type="radio" name="map" value="roadmap" checked>Road Map<br/>
-		      <input type="radio" name="map" value="satellite">Satellite<br/>
-		      <input type="radio" name="map" value="terrain">Terrain<br/>
-		      <input type="radio" name="map" value="hybrid">Hybrid<br/>
-		    </fieldset>
-		    <fieldset>
-		      <legend>Zoom Level</legend>
-  		      <input type="radio" name="zoom" value="10">Super Far<br/>
-  		      <input type="radio" name="zoom" value="12">Far<br/>
-  		      <input type="radio" name="zoom" value="15" checked>Normal<br/>
-  		      <input type="radio" name="zoom" value="18">Close<br/>
-  		      <input type="radio" name="zoom" value="20">Super Close<br/>
-  		     </fieldset>
-		      <button id="save_button">Save</button>
-	      </form>
-		</div>
+    <script type="text/javascript" src="src/demos/carousel.js"></script>
+    <script type="text/javascript" src="src/demos/icons.js"></script>
+    <script type="text/javascript" src="src/demos/map.js"></script>
+    <script type="text/javascript" src="src/demos/tabs.js"></script>
+    <script type="text/javascript" src="src/demos/bottomtabs.js"></script>
+    <script type="text/javascript" src="src/demos/toolbars.js"></script>
+    <script type="text/javascript" src="src/demos/touch.js"></script>
+    <script type="text/javascript" src="src/demos/forms.js"></script>
+    <script type="text/javascript" src="src/demos/buttons.js"></script>
+    <script type="text/javascript" src="src/demos/animations.js"></script>
+    <script type="text/javascript" src="src/demos/list.js"></script>
+    <script type="text/javascript" src="src/demos/LeafSelectedPlugin.js"></script>
+    <script type="text/javascript" src="src/demos/nestedlist.js"></script>
+    <script type="text/javascript" src="src/demos/audio.js"></script>
+    <script type="text/javascript" src="src/demos/video.js"></script>
+    <script type="text/javascript" src="src/demos/picker.js"></script>
+    <script type="text/javascript" src="src/demos/simulator.js"></script>
+    <script type="text/javascript" src="src/demos/themes.js"></script>
+    <script type="text/javascript" src="src/demos/data/jsonp.js"></script>
+    <script type="text/javascript" src="src/demos/data/ajax.js"></script>
+    <script type="text/javascript" src="src/demos/data/yql.js"></script>
+    <script type="text/javascript" src="src/demos/data/hasManyIteration.js"></script>
+    <script type="text/javascript" src="src/demos/data/nestedLoading.js"></script>
 
-	</body>
+    <script type="text/javascript" src="src/demos/sheets_overlays.js"></script>
+    <script type="text/javascript" src="src/structure.js"></script>
+</head>
+<body>
+</body>
 </html>
